# fitparser-bridge

./: Cargo.toml  README.md  package-lock.json  package.json
src/: fit_utils.rs  lib.rs
