[package]
name = "fitparser-bridge"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fitparser = "0.5.0"
md5 = "0.7.0"
serde = "1.0.136"
serde_json = "1.0.79"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
